# namer-inator

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO-inator.md  names-list.inator
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/: format.inator.rs  main.inator.rs  requests.inator.rs
